fixed mobile view spacing

--- a/src/index.css
+++ b/src/index.css
@@ -278,7 +278,7 @@ button {
   font-weight: 500;
   line-height: 1.5;
   font-size: 1.5em;
-  padding: 2rem;
+  padding: 0.1rem;
 }
 
 /* Home Page Our Work */
